--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.0",
+    "react-swipeable": "^7.0.2",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
